# stuartm.nz

./: .dockerignore  .editorconfig  .gitignore  .infisical.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  backup.sh  djlint.toml  docker-compose-dev.yml  docker-compose-stage.yml  docker-compose.yml  entrypoint.sh  env.template  export.sh  justfile  package-lock.json  package.json  pdm.toml  purgecss.config.mjs  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  webpack.config.js
.github/workflows/: docker-image.yml  test.yml  update-depedencies.yml
config/: context_processors.py  markdown_renderer.py  settings.py  settings_testing.py  sitemaps.py  urls.py
contact_form/: __init__.py  apps.py  forms.py  tasks.py  urls.py  views.py
debugging_app/: __init__.py  apps.py  urls.py  views.py
djpress/: admin.py  apps.py  feeds.py  models.py  signals.py  test_category_cache.py  test_feeds.py  test_models.py  test_published_content_cache.py  test_views.py  urls.py  utils.py  views.py
djpress/migrations/: 0001_initial.py  0001_squashed_0008_rename_content_post_alter_category_options_and_more.py  0002_alter_content_date.py  0003_alter_content_date_alter_content_modified_date.py  0004_alter_content_date.py  0005_alter_content_slug.py  0006_alter_category_slug.py  0007_alter_content_managers.py  0008_rename_content_post_alter_category_options_and_more.py  0009_alter_category_options_alter_post_options.py
djpress/models/: __init__.py  category.py  content.py  post.py  user.py
djpress/templatetags/: djpress_tags.py
djpress/tests/: test_djpress_tags.py  test_feeds.py  test_models.py  test_published_content_cache.py  test_views.py
djpress_admin/: __init__.py  apps.py  urls.py  views.py
docs/: index.md
healthcheck_app/: __init__.py  apps.py  checks.py  urls.py  views.py
home/: __init__.py  apps.py  urls.py  views.py
markdown_editor/: __init__.py  apps.py  urls.py  views.py
scripts/: db-backup.sh  db-restore.sh  export.sh
shell/: __init__.py  apps.py
spf_generator/: __init__.py  admin.py  apps.py  forms.py  models.py  test_views.py  urls.py  views.py
spf_generator/migrations/: 0001_initial.py
spf_generator/templatetags/: __init__.py  spf_generator_filters.py
static/css/: bs.css  bs53p.css  bs53p.min.css  fonts.css  highlight.custom.css  highlight.custom.css.map  pygments-github-dark.min.css  styles.css  styles.min.css
static/js/: 11.bundle.min.js  262.bundle.min.js  359.bundle.min.js  510.bundle.min.js  557.bundle.min.js  603.bundle.min.js  753.bundle.min.js  (+3 more)
templates/: 404.html  500.html  _base.html  base.html  robots.txt
tests/: conftest.py  test_views.py
timezone_converter/: __init__.py  apps.py  test_utils.py  urls.py  utils.py  views.py
(+58 files in other folders)
