[project]
name = "stuartm.nz"
version = "0.23.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
  "django~=6.0.0",
  "djpress~=0.23.0",
  "whitenoise~=6.12",
  "gunicorn~=25.3",
  "environs[django]~=15.0",
  "rich~=15.0",
  "sentry-sdk~=2.58",
  "django-debug-toolbar~=6.3",
  "pytest~=9.0",
  "pytest-django~=4.12",
  "mistune~=3.2",
  "pygments~=2.20",
  "djpress-publish-mastodon~=1.3",
  "httpx~=0.28",
  "logfire[asgi,django]~=4.32",
  "djpress-publish-bluesky~=1.1",
  "django-storages[s3]~=1.14",
  "uvicorn[standard]~=0.44",
]
authors = [
    {name = "Stuart Maxwell", email = "stuart@amanzi.nz"},
]
license = {text = "MIT"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_testing"
python_files = "tests.py test_*.py *_tests.py"

[tool.pdm]
distribution = false
