[project]
name = "stuartm.nz"
version = "0.27.0"
description = "Stuart's blog"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
  "django~=6.0",
  "djpress~=0.27",
  "whitenoise~=6.12",
  "gunicorn~=26.0",
  "environs[django]~=15.0",
  "rich~=15.0",
  "sentry-sdk~=2.61",
  "django-debug-toolbar~=6.3",
  "pytest~=9.0",
  "pytest-django~=4.12",
  "mistune~=3.2",
  "pygments~=2.20",
  "djpress-publish-mastodon~=1.3",
  "httpx~=0.28",
  "logfire[asgi,django]~=4.35",
  "djpress-publish-bluesky~=1.1",
  "django-storages[s3]~=1.14",
  "uvicorn[standard]~=0.49",
]
authors = [
    {name = "Stuart Maxwell", email = "stuart@amanzi.nz"},
]
license = {text = "MIT"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_testing"
python_files = "tests.py test_*.py *_tests.py"

[tool.pdm]
distribution = false
