[project]
name = "stuartm.nz"
version = "0.29.0"
description = "Stuart's blog"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
  "django~=6.0",
  "djpress~=0.30",
  "whitenoise~=6.12",
  "gunicorn~=26.0",
  "environs[django]~=15.0",
  "rich~=15.0",
  "sentry-sdk~=2.66",
  "django-debug-toolbar~=7.0",
  "pytest~=9.1",
  "pytest-django~=4.12",
  "mistune~=3.3",
  "pygments~=2.20",
  "djpress-publish-mastodon~=1.4",
  "httpx~=0.28",
  "logfire[asgi,django]~=4.37",
  "djpress-publish-bluesky~=1.2",
  "django-storages[s3]~=1.14",
  "uvicorn[standard]~=0.51",
  "djpress-blog-theme~=0.4",
  "djpress-tiptap~=0.2",
]
authors = [
    {name = "Stuart Maxwell", email = "stuart@amanzi.nz"},
]
license = {text = "MIT"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_testing"
python_files = "tests.py test_*.py *_tests.py"

[tool.pdm]
distribution = false
